# 6.5-Digit-Multislope-ADC

./: .gitignore  README.md  build.sh
Multilslope IIA/: CMakeLists.txt  main.c  ms.pio
PCB3/: DG408.lib  Multislope IIA-cache.lib  Multislope IIA.csv  Multislope IIA.kicad_pcb  Multislope IIA.kicad_pcb-bak  Multislope IIA.pro  Multislope IIA.sch  Multislope IIA.sch-bak  OpAmp Choice.xlsx  fp-info-cache  fp-lib-table
PCB3/bom/: ibom.html
PCB3/elongates.pretty/: elongates.kicad_mod  elongates2.kicad_mod
PCB3/gerber/: Multislope IIA-B_Cu.gbr  Multislope IIA-B_Mask.gbr  Multislope IIA-B_Paste.gbr  Multislope IIA-B_SilkS.gbr  Multislope IIA-Edge_Cuts.gbr  Multislope IIA-F_Cu.gbr  Multislope IIA-F_Mask.gbr  Multislope IIA-F_Paste.gbr  Multislope IIA-F_SilkS.gbr  Multislope IIA-NPTH.drl  Multislope IIA-PTH.drl  Multislope IIA-all-pos.csv  Multislope IIA-job.gbrjob
PCB3/svg/: Multislope IIA.xml
src/Multislope/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  debugclock.pio  dither.pio  main.c  ms copy.pio  ms.pio  workspace.code-workspace
src/Multislope/pico-sdk/: Makefile  cmake_install.cmake
src/Multislope/pico-sdk/docs/: Makefile  cmake_install.cmake
src/Multislope/pico-sdk/src/: Makefile  cmake_install.cmake
src/Multislope/pico-sdk/src/common/: Makefile  cmake_install.cmake
src/Multislope/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
src/Multislope/pico-sdk/tools/: Makefile  cmake_install.cmake
src/state_machine_emulator/: main.py  start.sh
src/state_machine_emulator/multislope/: c_prog  ms.pio.h  pin_prog
(+128 files in other folders)
